調整圖片路徑

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         <h3 class="section-title">床墊優勢</h3>
         <ul class="bedAdvantage">
             <li>
-                <img class="bedAdvantage-img" src="/img/tR426y5.png" alt="原木料環保">
+                <img class="bedAdvantage-img" src="./img/tR426y5.png" alt="原木料環保">
                 <p class="bedAdvantage-text">原木料環保</p>
             </li>
             <li>
-                <img class="bedAdvantage-img" src="/img/Fd2MiBb.png" alt="好收納">
+                <img class="bedAdvantage-img" src="./img/Fd2MiBb.png" alt="好收納">
                 <p class="bedAdvantage-text">好收納</p>
             </li>
             <li>
-                <img class="bedAdvantage-img" src="/img/5n1uTFh.png" alt="好組裝">
+                <img class="bedAdvantage-img" src="./img/5n1uTFh.png" alt="好組裝">
                 <p class="bedAdvantage-text">好組裝</p>
             </li>
         </ul>
@@ -98,10 +98,10 @@
             <div class="recommendation-wall">
                 <ul class="gallery-top">
                     <li class="recommendation-card">
-                        <img src="/img/cXcOLhu.png" alt="">
+                        <img src="./img/cXcOLhu.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/I9L7WOr.png" alt="">
+                                <img src="./img/I9L7WOr.png" alt="">
                                 <div>
                                     <p>王六角</p>
                                     <p class="recommend-text">Jodan 雙人床架</p>
@@ -111,10 +111,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/BefHmH2.png" alt="">
+                        <img src="./img/BefHmH2.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/CUFGfay.png" alt="">
+                                <img src="./img/CUFGfay.png" alt="">
                                 <div>
                                     <p>Leaf</p>
                                     <p class="recommend-text">Antony 雙人床架</p>
@@ -127,7 +127,7 @@
                         <img src="https://github.com/hexschool/js-training/blob/main/%E7%AC%AC%E4%B9%9D%E9%80%B1%E4%B8%BB%E7%B7%9A%E4%BB%BB%E5%8B%99%E5%9C%96%E5%BA%AB/3IATkJG.png?raw=true" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/8WwZsLS.png" alt="">
+                                <img src="./img/8WwZsLS.png" alt="">
                                 <div>
                                     <p>美濃鄧子琪</p>
                                     <p class="recommend-text">Charles 系列儲物組合</p>
@@ -137,10 +137,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/HvT3zlU.png" alt="">
+                        <img src="./img/HvT3zlU.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/NycuPVy.png" alt="">
+                                <img src="./img/NycuPVy.png" alt="">
                                 <div>
                                     <p>isRaynotArray</p>
                                     <p class="recommend-text">Antony 雙人床架</p>
@@ -150,10 +150,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/Ed7bxLr.png" alt="">
+                        <img src="./img/Ed7bxLr.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/zdFOQIv.png" alt="">
+                                <img src="./img/zdFOQIv.png" alt="">
                                 <div>
                                     <p>程鮭魚</p>
                                     <p class="recommend-text">Louvre 雙人床架</p>
@@ -165,10 +165,10 @@
                 </ul>
                 <ul class="gallery-bottom">
                     <li class="recommendation-card">
-                        <img src="/img/BefHmH2.png" alt="">
+                        <img src="./img/BefHmH2.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/W7fyzp2.png" alt="">
+                                <img src="./img/W7fyzp2.png" alt="">
                                 <div>
                                     <p>小杰</p>
                                     <p class="recommend-text">Louvre 雙人床架</p>
@@ -178,10 +178,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/mjA01Tk.png" alt="">
+                        <img src="./img/mjA01Tk.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/8O1cOnG.png" alt="">
+                                <img src="./img/8O1cOnG.png" alt="">
                                 <div>
                                     <p>江八角</p>
                                     <p class="recommend-text">Charles 雙人床架</p>
@@ -191,10 +191,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/npA3DgP.png" alt="">
+                        <img src="./img/npA3DgP.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/C0NDvSA.png" alt="">
+                                <img src="./img/C0NDvSA.png" alt="">
                                 <div>
                                     <p>juni讚神</p>
                                     <p class="recommend-text">Antony 床邊桌</p>
@@ -204,10 +204,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/Ed7bxLr.png" alt="">
+                        <img src="./img/Ed7bxLr.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/hUsTZDm.png" alt="">
+                                <img src="./img/hUsTZDm.png" alt="">
                                 <div>
                                     <p>久安說安安</p>
                                     <p class="recommend-text">Antony 單人床架</p>
@@ -217,10 +217,10 @@
                         </div>
                     </li>
                     <li class="recommendation-card">
-                        <img src="/img/mjA01Tk.png" alt="">
+                        <img src="./img/mjA01Tk.png" alt="">
                         <div class="recommend-content">
                             <div class="recommend-img">
-                                <img src="/img/3ako6QX.png" alt="">
+                                <img src="./img/3ako6QX.png" alt="">
                                 <div>
                                     <p>PeiQun</p>
                                     <p class="recommend-text">Antony 雙人床架</p>
